<resources>
    <string name="app_name">APM</string>
    <string name="title_activity_map_selector">AreaMap</string>
    <string name="title_welcome">Welcome</string>
    <string name="welcome_tit">Welcome to the Peoples Map of Corvallis</string>
    <string name="welcome_text">This app is create with you in mind. Come join us in creating the world we see around us.</string>
    <string name="btn_cont">Contribute</string>
    <string name="btn_look">Just Look</string>
    <string name="btn_abt">About</string>
    <string name="btn_audio">Audio</string>
    <string name="btn_video">Video</string>
    <string name="btn_pic">Picture</string>
    <string name="cont_text"></string>
    <string name="abt_text">This was created as a way to express what, or how people interpret the world around them. Each piece of art is tied to a location that means something to someone. You can either view the map for what art other people have contributed, or add your own art to the location it represents. This map represents how we interpret the world around us. Look around and find the art and experience of others in the form or pictures, audio and video.</string>
    <string name="tmp1">temp1</string>
    <string name="wtim">Welcome to Island Music</string>
    <string name="app_start">The App is Starting…</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_gallery">Gallery</string>
    <string name="arright"> &gt; </string>
    <string name="arleft"> &lt; </string>
    <string name="title_activity_s3_upload">S3Upload</string>

</resources>
