<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contribute"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="islandmusic.apm.Contribute">

    <TextView
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cont_text"
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:layout_below="@+id/btn_pic"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="103dp"
        android:layout_marginTop="75dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_pic"
        android:id="@+id/btn_pic"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="118dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btn_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btn_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />
</RelativeLayout>